<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Chat Client</string>
    <string name="menu_settings">Settings</string>
    <string name="edit_message">Edit Message</string>
    <string name="button_send">Send</string>
    <string name="menu_check_online_clients">Check for online clients…</string>
    <string name="menu_retry_connect">Retry connecting to server…</string>
    <string name="menu_large_send">Send thirty messages</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_start_record_audio">Start recording</string>
    <string name="menu_stop_record_audio">Stop recording</string>
    <string name="menu_start_play_audio">Start playing</string>
    <string name="menu_stop_play_audio">Stop playing</string>
    <string name="menu_upload_audio">Upload audio file</string>
    <string name="menu_download_audio">Download audio file</string>
    <string name="menu_start_stream">Start stream</string>
    <string name="menu_stop_stream">Stop stream</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_upload">Upload</string>
    <string name="dialog_server_address_label">Enter server address:</string>
    <string name="dialog_server_address_hint">Eg. example@auckland.ac.nz</string>
    <string name="dialog_server_port_label">Enter port number:</string>
    <string name="dialog_server_port_hint">Eg. 8080</string>
    <string name="server_dialog_title">Set server address and port number:</string>
    <string name="menu_download_upon_notification">Set to download mode</string>
    <string name="menu_stream_upon_notification">Set to stream mode</string>

</resources>