<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".50"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/list_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:transcriptMode="alwaysScroll" >
        </ListView>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/edit_message" />

        <Button
            android:id="@+id/send_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/button_send" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/file_spinner"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/upload_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="uploadFile"
            android:text="@string/button_upload" />
    </TableRow>

</TableLayout>